--- a/index/index.html
+++ b/index/index.html
@@ -6,7 +6,6 @@
 
 				div {
 					display: flex;
-
 					align-items: center;
 					justify-content: center;
 					width: 100%;
@@ -24,13 +23,11 @@
 				}
 
 				button {
-
-
-					height:200px;
-					width:400px;
+					height:20px;
+					width:100px;
 					color: white;
 					text-shadow: 0 0 3px black, 0 0 5px #0000FF;
-
+					border-radius: 10px;
 
 				}
 			</style>
