--- a/index/index.html
+++ b/index/index.html
@@ -1,51 +1,48 @@
-	<html>
-	<head>
+<html>
+<head>
 
-		<style>
-			/* i primi tre attributi del div servono a posizionare i 2 bottoni in mezzo al centro */
+	<style>
+	/* i primi tre attributi del div servono a posizionare i 2 bottoni in mezzo al centro */
 
-				div {
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					width: 100%;
-					height: 50%;
-					border: solid black 2px;
-					border-radius: 5px;
-				}
+	div {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 50%;
+		border: solid black 2px;
+		border-radius: 5px;
+	}
 
-				.contanier_login{
-					background-color: red;
-				}
+	.contanier_login{
+		background-color: green;
+	}
 
-				.contanier_register{
-					background-color: yellow;
-				}
+	.contanier_register{
+		background-color: green;
+	}
+	button {
+		height:20px;
+		width:100px;
+		color: white;
+		text-shadow: 0 0 3px black, 0 0 5px #0000FF;
+		border-radius: 10px;
+	}
+	</style>
 
-				button {
-					height:20px;
-					width:100px;
-					color: white;
-					text-shadow: 0 0 3px black, 0 0 5px #0000FF;
-					border-radius: 10px;
-
-				}
-			</style>
-
-		</head>
-		<body>
-			<div class="contanier_login" >
-				<button>LOGIN</button>
+</head>
+<body>
+	<div class="contanier_login" >
+		<button>LOGIN</button>
 
 
-			</div>
+	</div>
 
-			<div class="contanier_register" >
-				<button>REGISTRATI</button>
+	<div class="contanier_register" >
+		<button>REGISTRATI</button>
+	</div>
 
-			</div>
-
-		</body>
+</body>
 
 
-		</html>
+</html>
