--- a/index/index.html
+++ b/index/index.html
@@ -2,7 +2,7 @@
 <head>
 
 	<style>
-	/* i primi tre attributi del div servono a posizionare i 2 bottoni in mezzo al centro rrrrrrrrrrr */
+	/* i primi tre attributi del div servono a posizionare i 2 bottoni in mezzo al centro */
 
 	div {
 		display: flex;
