aggiunto tag meta-view-port per visualizzazione migliore

--- a/index/index.html
+++ b/index/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width">
 
 	<style>
-	/* i primi tre attributi del div servono a posizionare i 2 bottoni in mezzo al centro */
 
 	div {
 		display: flex;
@@ -13,11 +13,9 @@
 		border: solid black 2px;
 		border-radius: 5px;
 	}
-
 	.contanier_login{
 		background-color: green;
 	}
-
 	.contanier_register{
 		background-color: green;
 	}
