--- a/index/index.html
+++ b/index/index.html
@@ -1,32 +1,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width">
-
-	<style>
-
-	div {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 100%;
-		height: 50%;
-		border: solid black 2px;
-		border-radius: 5px;
-	}
-	.contanier_login{
-		background-color: green;
-	}
-	.contanier_register{
-		background-color: green;
-	}
-	button {
-		height:20px;
-		width:100px;
-		color: white;
-		text-shadow: 0 0 3px black, 0 0 5px #0000FF;
-		border-radius: 10px;
-	}
-	</style>
+	<link rel="stylesheet" href="homrpage.css">
 
 </head>
 <body>
