--- a/index/index.html
+++ b/index/index.html
@@ -1,10 +1,12 @@
 <html>
+<link rel="stylesheet" href="homepage.css" type="text/css">
+
 <head>
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="homrpage.css">
 
 </head>
 <body>
+
 	<div class="contanier_login" >
 		<button>LOGIN</button>
 
