--- a/index/index.html
+++ b/index/index.html
@@ -1,9 +1,7 @@
 <html>
-<link rel="stylesheet" href="homepage.css" type="text/css">
-
 <head>
 	<meta name="viewport" content="width=device-width">
-
+	<link rel="stylesheet" href="homepage.css">
 </head>
 <body>
 
