--- a/index/index.html
+++ b/index/index.html
@@ -6,13 +6,14 @@
 <body>
 
 	<div class="contanier_login" >
-		<button>LOGIN</button>
-
+		<button>LOG IN</button>
+	</div>
+	<div class="separator">
 
 	</div>
 
 	<div class="contanier_register" >
-		<button>REGISTRATI</button>
+		<button>LOG UP</button>
 	</div>
 
 </body>
