rinominato homepage login.html aggiornata login.css aggiunta

--- a/index/login.html
+++ b/index/login.html
@@ -1,59 +1,55 @@
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+
 	<meta name="viewport" content="width=device-width">
 
-	<style>
-    #register {
-      	display:flex;
-		align-items: center;
-		justify-content: center;
-		width: 50%;
-		height: 50%;
-		border: solid black 2px;
-        border-radius: 5px;
-        background-color: antiquewhite;
-
-
-
-        }
-        input{
-        display:flex;
-		align-items: center;
-		justify-content: center;
-
-
-        }
-
-        #invia{ <!-- riferito al bottone registarti  -->
-    position: absolute;
-    padding-left: 44px;
-        }
-
-
-
-	</style>
+<link rel="stylesheet" type="text/css" href="login.css"
 
 </head>
 <body>
-	<div id="register">
-        <form >
 
-                <label for="nome">Nome:</label>
+
+    <div id="div_big">
+
+
+
+
+	   <div id="register">
+
+
+
+         <form >
+
+
+               <fieldset>
+                   <legend class="form_legend">Nome</legend>
+
                 <input type="text" name="nome" placeholder="nome"><br>
+                </fieldset>
 
-                     <label for="cognome">Cognome:</label>
+                    <fieldset>
+                    <legend class="form_legend">Cognome</legend>
                     <input type="text" name="cognome" placeholder="cognome"><br>
+                        </fieldset>
 
-                        <label for="email">Email:</label>
+                       <fieldset>
+                           <legend class="form_legend">Email</legend>
                         <input type="email" name="email" placeholder="email"><br>
+                           </fieldset>
 
-                            <label for="pw">Password:</label>
+                            <fieldset>
+                                <legend class="form_legend">Password</legend>
                             <input type="password" name="pw" placeholder="password"><br>
+                                </fieldset>
 
-                            <label for="r_pw">Ripeti password:</label>
+                            <fieldset>
+                                <legend class="form_legend">Ripeti</legend>
                             <input type="password" name="r_pw" placeholder="password"><br>
+                            </fieldset>
 
-                <p id="invia"><input type="submit" value="registrati" > </p>
+                <p id="invia"><input type="submit" value="registrati" id="b_invia"> </p>
 
             </form>
 
@@ -62,7 +58,14 @@
 
 
 
-    </div>
+
+
+    </div> <!-- div register -->
+
+
+
+    </div> <!-- div big -->
+         </fieldset>
 </body>
 
 
