--- a/index/index.html
+++ b/index/index.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width">
 
 
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="log_up.css">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="contanier_register" >
-		<button>LOG UP</button>
+		<a href="l"<button>LOG UP</button>
 	</div>
 
 </body>
