--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="contanier_register" >
-		<a href="l"<button>LOG UP</button>
+		<a href="log_up.html"><button>LOG UP</button></a>
 	</div>
 
 </body>
