aggiornato log_up.html

--- a/index/log_up.html
+++ b/index/log_up.html
@@ -2,7 +2,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" type="text/css" href="login.css"
+<link rel="stylesheet" type="text/css" href="log_up.css"
 </head>
 <body>
     <div id="div_big">
