aggiunto collegato log up aggiunto collegato log up  con la pagina index.html

--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="contanier_register" >
-		<a href="log_up.html"><button>LOG UP</button></a>
+		><button><a href="log_up.html">LOG UP </a></button>
 	</div>
 
 </body>
