index.html corretti alcuni errori

--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="contanier_register" >
-		><button><a href="log_up.html">LOG UP </a></button>
+		<button><a href="log_up.html">LOG UP </a></button>
 	</div>
 
 </body>
