--- a/index/index.html
+++ b/index/index.html
@@ -1,25 +1,21 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width">
-
-
 	<link rel="stylesheet" href="index.css">
-
 </head>
 <body>
-
+	<header>
+		<div class="header">
+			<h1>Project Alpha</h1>
+		</div>
+	</header>
 	<div class="contanier_login" >
 		<button>LOG IN</button>
 	</div>
-	<div class="separator">
-
-	</div>
-
+	<span class="separator">
+	</span>
 	<div class="contanier_register" >
-		<button><a href="log_up.html">LOG UP </a></button>
+		<button>LOG UP</button>
 	</div>
-
 </body>
-
-
 </html>
